// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "gap" and "gapVertical" props 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -5rem;
  margin-right: -5rem;
  margin-top: -2.5rem;
  margin-bottom: -2.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  padding-left: 5rem;
  padding-right: 5rem;
  padding-top: 2.5rem;
  padding-bottom: 2.5rem;
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
    <div
      class="emotion-0"
    >
      2
    </div>
  </div>
</div>
`;

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  color: red;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should accept flex container props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column-reverse;
  -ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;

exports[`should accept responsive gaps 1`] = `
.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -3rem;
  margin-bottom: -3rem;
}

@media (min-width:600px) {
  .emotion-2 {
    margin-left: -1rem;
    margin-right: -1rem;
  }
}

@media (min-width:960px) {
  .emotion-2 {
    margin-left: -1.5rem;
    margin-right: -1.5rem;
  }
}

@media (min-width:1280px) {
  .emotion-2 {
    margin-left: -2rem;
    margin-right: -2rem;
  }
}

@media (min-width:1920px) {
  .emotion-2 {
    margin-left: -2.5rem;
    margin-right: -2.5rem;
  }
}

@media (min-width:600px) {
  .emotion-2 {
    margin-top: -3.5rem;
    margin-bottom: -3.5rem;
  }
}

@media (min-width:960px) {
  .emotion-2 {
    margin-top: -4rem;
    margin-bottom: -4rem;
  }
}

@media (min-width:1280px) {
  .emotion-2 {
    margin-top: -4.5rem;
    margin-bottom: -4.5rem;
  }
}

@media (min-width:1920px) {
  .emotion-2 {
    margin-top: -5rem;
    margin-bottom: -5rem;
  }
}

.emotion-0 {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

@media (min-width:600px) {
  .emotion-0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (min-width:960px) {
  .emotion-0 {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
  }
}

@media (min-width:1280px) {
  .emotion-0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (min-width:1920px) {
  .emotion-0 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }
}

@media (min-width:600px) {
  .emotion-0 {
    padding-top: 3.5rem;
    padding-bottom: 3.5rem;
  }
}

@media (min-width:960px) {
  .emotion-0 {
    padding-top: 4rem;
    padding-bottom: 4rem;
  }
}

@media (min-width:1280px) {
  .emotion-0 {
    padding-top: 4.5rem;
    padding-bottom: 4.5rem;
  }
}

@media (min-width:1920px) {
  .emotion-0 {
    padding-top: 5rem;
    padding-bottom: 5rem;
  }
}

<div>
  <div
    class="emotion-2"
  >
    <div
      class="emotion-0"
    >
      1
    </div>
    <div
      class="emotion-0"
    >
      2
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  margin-top: -0.5rem;
  margin-bottom: -0.5rem;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div>
  <div
    class="emotion-0"
  >
    Content
  </div>
</div>
`;
